# CETSAx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CITATION.cff  Dockerfile  NOTICE  README.md  Snakefile  TERMS_OF_USE.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker_down.sh  docker_interactive.sh  docker_push.sh  docker_test_local.sh  docker_up.sh  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  report.html  requirements.txt
.github/: CODEOWNERS  cetsa-improvements.prompt.md  dependabot.yml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
api/: index.html
cetsax/: __init__.py  annotate.py  bayes.py  config.py  dataio.py  enrichment.py  fit.py  hits.py  latent.py  mixture.py  ml.py  models.py  network.py  plotting.py  redox.py  sensitivity.py  viz.py  viz_hits.py  viz_predict.py
cetsax/deeplearn/: __init__.py  esm_seq_nadph.py  my_seq_nadph.py  seq_nadph.py
citation/: index.html
contributing/: index.html
curve_fitting/: index.html
data/: README.md  index.html  nadph.csv
design_principles/: index.html
docs/: api.md  citation.md  contributing.md  curve_fitting.md  data.md  design_principles.md  equations.md  explainability.md  index.md  latent_analysis.md  limitations.md  network_analysis.md  pathway_enrichment.md  sensitivity_scoring.md  sequence_modeling.md  usage.md  visualization.md  workflow.md
docs/javascripts/: mathjax.js
equations/: index.html
explainability/: index.html
latent_analysis/: index.html
limitations/: index.html
network_analysis/: index.html
nextflow/: main.nf  nextflow.config
pathway_enrichment/: index.html
scripts/: 01_fit_itdr_curves.py  02_hit_calling_and_diagnostics.py  03_system_level_analysis.py  04_my_seq_build_and_train.py  04_seq_build_and_train.py  05_my_predict_nadph_effects.py  05_predict_nadph_effects.py  06_model_predict_results.py  07_network_analysis.py  08_curve_ml.py  09_bayesian_fit.py  10_plot_curves.py  11_model_performance.py  12_residue_mapper.py  13_plot_global_summary.py  call_hits.py  fit_ec50.py  predict_nadph.py
search/: search_index.json
sensitivity_scoring/: index.html
sequence_modeling/: index.html
tests/: conftest.py  test_dataio_hits_sensitivity.py  test_deeplearn_utils.py  test_enrichment_network.py  test_latent_mixture_ml_redox.py  test_models_and_fit.py  test_plotting_and_viz.py  test_viz_hits_and_annotate.py
usage/: index.html
visualization/: index.html
workflow/: index.html
workflow/profiles/local/: config.yaml
workflow/profiles/slurm/: config.yaml
