[project]
name = "cetsax"
version = "0.1.0"
description = "CETSA analysis and deep learning toolkit for binding curves, hit calling, and proteome-wide ligand-responsiveness prediction."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }
]

license = { file = "LICENSE" }

keywords = [
    "CETSA",
    "proteomics",
    "dose-response",
    "EC50",
    "KD",
    "bioinformatics",
    "deep-learning",
    "protein-language-models",
    "ESM-2",
    "systems-biology"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "joblib",
    "scikit-learn>=1.7.2",
    "pymc>=5.25.1",
    "arviz>=0.22.0",
    "networkx>=3.4.2",
    "torch>=2.9.1",
    "mygene>=3.2.2",
    "requests>=2.32.5",
    "fair-esm>=2.0.0",
    "seaborn>=0.13.2",
    "snakemake>=7.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/bibymaths/cetsax"
Source = "https://github.com/bibymaths/cetsax"
Issues = "https://github.com/bibymaths/cetsax-nadph/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cetsax"]